# mimiclaw_DLC

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_CN.md  README_JA.md  config.md  example.md  features.md  sdkconfig.defaults  sdkconfig.defaults.esp32s3  tool_capture.c  tool_capture.h  tool_rgb.c  tool_rgb.h
.github/workflows/: main.yml
assets/: banner_172x320.rgb565  banner_320x172.rgb565
components/ble/: CMakeLists.txt  dummy.c  lua_modulo_ble.c  lua_modulo_ble.h  tool_ble_listener.c  tool_ble_listener.h
components/camera/: CMakeLists.txt  camera_config.h  camera_core.c  camera_server.h  dummy.c  lua_modulo_camera.c  lua_modulo_camera.h  tool_camera_capture.c
components/micropython_embed/: CMakeLists.txt
docs/: ARCHITECTURE.md
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  mimi.c  mimi_config.h  mimi_secrets.h.example
main/agent/: agent_loop.c  agent_loop.h  context_builder.c  context_builder.h
main/ble/: ble_client.c  bthome_listener.c  bthome_listener.h
main/buddy/: buddy.c  buddy.h  buddy_agent.c  buddy_agent.h  buddy_ble.c  buddy_ble.h  buddy_contacts.c  buddy_contacts.h  buddy_crypto.c  buddy_crypto.h  buddy_espnow.c  buddy_espnow.h  buddy_profile.c  buddy_profile.h  buddy_proximity.c  buddy_proximity.h
main/bus/: message_bus.c  message_bus.h
main/buttons/: button_driver.c  button_driver.h
main/camera_core/: camera_config.h  camera_core.c  camera_core.h  camera_server.c
main/channels/a2a/: a2a_server.c  a2a_server.h
main/channels/feishu/: feishu_bot.c  feishu_bot.h
main/channels/telegram/: telegram_bot.c
main/cli/: serial_cli.c
main/cron/: cron_service.c  cron_service.h
main/display/: display.c  display.h  font5x7.h
main/display/Vernon_ST7789T/: Vernon_ST7789T.c
main/feature_config/: feature_config.c  feature_config.h
main/gateway/: ws_server.c
main/heartbeat/: heartbeat.c
main/imu/: I2C_Driver.h  imu_manager.c  imu_manager.h
main/llm/: llm_proxy.c
main/lua/: lua_gpio_lib.c  lua_gpio_lib.h  lua_runner.c
main/memory/: session_mgr.c
main/mpy/: mpy_gpio_module.c  mpy_port_io.c  mpy_runner.c  mpy_stdout.c  mpy_stdout.h
main/onboard/: onboard_html.h  wifi_onboard.c  wifi_onboard.h
main/proxy/: http_proxy.c  http_proxy.h
main/rgb/: rgb.c  rgb.h
main/skills/: skill_loader.c  skill_loader.h
main/telegram/: telegram_bot.c
main/tools/: tool_a2a_client.c  tool_a2a_client.h  tool_arxiv.c  tool_arxiv.h  tool_ble.c  tool_ble_listener.c  tool_camera_capture.c  tool_camera_capture.h  tool_capture.c  tool_capture.h  tool_cron.c  tool_device_control.c  tool_device_control.h  tool_files.c  tool_files.h  tool_get_time.c  tool_get_time.h  tool_gpio.c  tool_gpio.h  tool_http_request.c  tool_http_request.h  tool_registry.c  tool_rgb.c  tool_rgb.h  tool_rgb_control.h  tool_script.c  tool_script.h  tool_sleep.c  tool_sleep.h  tool_web_search.c  tool_web_search.h
main/ui/: config_screen.c  config_screen.h
main/wifi/: wifi_manager.c  wifi_manager.h
(+55 files in other folders)
